--- a/Project.toml
+++ b/Project.toml
@@ -1,10 +1,11 @@
 name = "GenOpt"
 uuid = "f2c049d8-7489-4223-990c-4f1c121a4cde"
-authors = ["Benoît Legat <benoit.legat@gmail.com>"]
 version = "0.1.0"
+authors = ["Benoît Legat <benoit.legat@gmail.com>"]
 
 [deps]
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
+MathOptInterface = "b8f27783-ece8-5eb3-8dc8-9495eed66fee"
 
 [compat]
 JuMP = "1.23.5"
