--- a/Project.toml
+++ b/Project.toml
@@ -4,12 +4,11 @@ version = "0.1.0"
 authors = ["Benoît Legat <benoit.legat@gmail.com>"]
 
 [deps]
-CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
 ExaModels = "1037b233-b668-4ce9-9b63-f9f681f55dd2"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
-MadNLP = "2621e9c9-9eb4-46b1-8089-e8c72242dfb6"
 MathOptInterface = "b8f27783-ece8-5eb3-8dc8-9495eed66fee"
 
 [compat]
-CUDA = "5.9.2"
-JuMP = "1.23.5"
+ExaModels = "0.9"
+JuMP = "1.29"
+MathOptInterface = "1.46"
