--- a/Project.toml
+++ b/Project.toml
@@ -12,3 +12,4 @@ MathOptInterface = "b8f27783-ece8-5eb3-8dc8-9495eed66fee"
 ExaModels = "0.9"
 JuMP = "1.29"
 MathOptInterface = "1.46"
+julia = "1.10"
